--- a/src/app/common/layout/sidebar/navigation.component.html
+++ b/src/app/common/layout/sidebar/navigation.component.html
@@ -1,7 +1,9 @@
 <div
   class="m-sidebarNavigation"
   [class.m-sidebarNavigation--slide]="layoutMode === 'phone'"
-  [ngClass]="{ 'm-sidebarNavigation--matrixFeature': matrixFeature }"
+  [ngClass]="{
+    'm-sidebarNavigation--matrixFeature': matrixFeature
+  }"
   (click)="onSidebarNavClick()"
 >
   <nav>
