Add data-ref to sidebarMore links

--- a/src/app/common/layout/sidebar/navigation.component.html
+++ b/src/app/common/layout/sidebar/navigation.component.html
@@ -451,7 +451,7 @@
             [routerLinkActive]="'m-sidebarNavigation__item--active'"
             [routerLinkActiveOptions]="{ exact: true }"
           >
-            <a>
+            <a data-ref="sidenav-more">
               <m-tooltip
                 [enabled]="!showLabels"
                 [anchor]="'left'"
