--- a/src/app/common/layout/sidebar-more/sidebar-more.component.html
+++ b/src/app/common/layout/sidebar-more/sidebar-more.component.html
@@ -1,6 +1,6 @@
 <div class="m-sidebarMore">
   <ul class="m-dropdown__list m-sidebarMore__dropdown">
-    <!-- ----------------------- -->
+    <!-- ------------------------------------------------------------ -->
     <li
       class="
         m-dropdownList__item
@@ -8,14 +8,14 @@
       "
       *ngIf="getCurrentUser()"
     >
-      <a [routerLink]="'/settings'">
+      <a [routerLink]="'/settings'" data-ref="sidebarmore-settings">
         <i class="material-icons">settings</i>
         <span class="m-sidebarNavigationItem__text" i18n="@@COMMON__SETTINGS"
           >Settings</span
         >
       </a>
     </li>
-    <!-- ----------------------- -->
+    <!-- ------------------------------------------------------------ -->
     <li
       class="
         m-dropdownList__item
@@ -24,7 +24,7 @@
       (click)="buyTokens()"
       *ngIf="getCurrentUser()"
     >
-      <a (click)="buyTokens()">
+      <a (click)="buyTokens()" data-ref="sidebarmore-buytokens-modal">
         <m-icon from="custom" iconId="wallet"></m-icon>
 
         <span class="m-sidebarNavigationItem__text" i18n="@@COMMON__BUY_CRYPTO"
@@ -32,7 +32,7 @@
         >
       </a>
     </li>
-    <!-- ----------------------- -->
+    <!-- ------------------------------------------------------------ -->
     <li
       class="
         m-dropdownList__item
@@ -40,42 +40,41 @@
       "
       *ngIf="getCurrentUser()"
     >
-      <a [routerLink]="'/analytics'">
+      <a [routerLink]="'/analytics'" data-ref="sidebarmore-analytics">
         <i class="material-icons">insert_chart</i>
         <span class="m-sidebarNavigationItem__text" i18n="@@COMMON__ANALYTICS"
           >Analytics</span
         >
       </a>
     </li>
-    <!-- ----------------------- -->
+    <!-- ------------------------------------------------------------ -->
     <li
       class="m-dropdownList__item m-sidebarMoreDropdown__item"
       *ngIf="getCurrentUser()"
     >
-      <a (click)="openBoostModal()">
+      <a (click)="openBoostModal()" data-ref="sidebarmore-boost-modal">
         <i class="material-icons">trending_up</i>
         <span i18n="@@COMMON__BOOST_CONSOLE">Boost</span>
       </a>
     </li>
-    <!-- ----------------------- -->
+    <!-- ------------------------------------------------------------ -->
     <li
       class="m-dropdownList__item m-sidebarMoreDropdown__item"
       *ngIf="getCurrentUser()"
     >
-      <a (click)="openEarnModal()">
+      <a (click)="openEarnModal()" data-ref="sidebarmore-earn-modal">
         <i class="material-icons">attach_money</i>
         <span i18n="@@COMMON__EARN">Earn</span>
       </a>
     </li>
-    <!--./././././././././././././.-->
+    <!--./././././././././././././././././././././././././././././././.-->
     <li
       class="
         m-dropdownList__item
         m-sidebarMoreDropdown__item m-sidebarMoreDropdown__spacer
       "
     ></li>
-    <!--./././././././././././././.-->
-
+    <!--./././././././././././././././././././././././././././././././.-->
     <li
       class="m-dropdownList__item m-sidebarMoreDropdown__item"
       *ngIf="getCurrentUser()"
@@ -92,23 +91,26 @@
         </ng-container>
       </a>
     </li>
-    <!-- ----------------------- -->
+    <!-- ------------------------------------------------------------ -->
     <li class="m-dropdownList__item m-sidebarMoreDropdown__item">
       <!--Endpoint handles authentication and redirection-->
-      <a href="/api/v3/helpdesk/zendesk" target="_blank">
+      <a
+        href="/api/v3/helpdesk/zendesk"
+        target="_blank"
+        data-ref="sidebarmore-help-zendesk"
+      >
         <i class="material-icons">help</i>
         <span i18n="@@COMMON__HELP">Help</span>
       </a>
     </li>
-    <!--./././././././././././././.-->
+    <!--./././././././././././././././././././././././././././././././.-->
     <li
       class="
         m-dropdownList__item
         m-sidebarMoreDropdown__item m-sidebarMoreDropdown__spacer
       "
     ></li>
-    <!--./././././././././././././.-->
-
+    <!--./././././././././././././././././././././././././././././././.-->
     <li
       class="
         m-dropdownList__item
@@ -118,9 +120,12 @@
       <ng-container
         *ngFor="let link of footerLinks.slice(0, maxFooterLinks); let i = index"
       >
-        <a *ngIf="link.routerLink" [routerLink]="link.routerLink">{{
-          link.label
-        }}</a>
+        <a
+          *ngIf="link.routerLink"
+          [routerLink]="link.routerLink"
+          [data-ref]="'sidebarmore-footer' + link.label"
+          >{{ link.label }}</a
+        >
         <a *ngIf="link.href" [href]="link.href" target="_blank">{{
           link.label
         }}</a>
