--- a/src/app/modules/modals/v3/_bootstrap-modal.scss
+++ b/src/app/modules/modals/v3/_bootstrap-modal.scss
@@ -1,15 +1,15 @@
 // Configuration
 @import '../../../../../node_modules/bootstrap/scss/functions';
-@import "../../../../../node_modules/bootstrap/scss/variables";
-@import "../../../../../node_modules/bootstrap/scss/mixins";
-@import "../../../../../node_modules/bootstrap/scss/utilities";
+@import '../../../../../node_modules/bootstrap/scss/variables';
+@import '../../../../../node_modules/bootstrap/scss/mixins';
+@import '../../../../../node_modules/bootstrap/scss/utilities';
 
 // Layout & components
-@import "../../../../../node_modules/bootstrap/scss/transitions";
-@import "../../../../../node_modules/bootstrap/scss/modal";
+@import '../../../../../node_modules/bootstrap/scss/transitions';
+@import '../../../../../node_modules/bootstrap/scss/modal';
 
 // Helpers
-@import "../../../../../node_modules/bootstrap/scss/helpers";
+@import '../../../../../node_modules/bootstrap/scss/helpers';
 
 // Utilities
-@import "../../../../../node_modules/bootstrap/scss/utilities/api";
+@import '../../../../../node_modules/bootstrap/scss/utilities/api';
