Add option to hide your wallet balance from the site topbar #5051

--- a/src/app/common/layout/topbar/topbar-wallet-balance/topbar-wallet-balance.html
+++ b/src/app/common/layout/topbar/topbar-wallet-balance/topbar-wallet-balance.html
@@ -2,7 +2,7 @@
   class="m-topbar-wallet-balance"
   routerLink="/wallet/tokens/rewards"
   data-ref="topnav-wallet"
-  *ngIf="isConnected && tokenBalance >= 0 && usdBalance >= 0"
+  *ngIf="showWalletBalance()"
 >
   <div class="m-topbar-wallet-balance__tokens">
     <m-icon from="custom" iconId="wallet" m-tooltip--icon></m-icon>
