Pad top of sidebar nav

--- a/src/app/common/layout/sidebar/navigation.component.ng.scss
+++ b/src/app/common/layout/sidebar/navigation.component.ng.scss
@@ -41,6 +41,12 @@
     .m-sidebarNavigation {
       overflow: visible;
 
+      &:not(.m-sidebarNavigation--slide) {
+        .m-sidebarNavigation__list {
+          padding-top: 26px;
+        }
+      }
+
       nav {
         overflow-y: auto;
         max-height: calc(100vh - 75px);
