--- a/src/app/modules/discovery/tabs/tabs.component.html
+++ b/src/app/modules/discovery/tabs/tabs.component.html
@@ -37,7 +37,7 @@
         >Trending</a
       >
     </div>
-    <div class="m-tabs__tab">
+    <!-- <div class="m-tabs__tab">
       <a
         routerLink="/discovery/memberships/feed"
         routerLinkActive="m-tabs__tab--selected"
@@ -45,7 +45,7 @@
         i18n="@@DISCOVERY_TAGS__MEMBERSHIPS"
         >Memberships</a
       >
-    </div>
+    </div> -->
     <div class="m-tabs__tab">
       <a
         routerLink="/discovery/boost/feed"
