--- a/src/app/modules/discovery/search/search.component.html
+++ b/src/app/modules/discovery/search/search.component.html
@@ -52,9 +52,7 @@
   <m-discovery__tagWidget></m-discovery__tagWidget>
 
   <div class="m-discoveryFeeds__feed">
-    <ng-container
-      *ngFor="let entity$ of service.entities$ | async; let i = index"
-    >
+    <ng-container *ngFor="let entity$ of entities; let i = index">
       <!-- ---------------------- -->
       <!-- SEARCH RESULTS -->
       <!-- ---------------------- -->
@@ -65,12 +63,7 @@
       <!-- ---------------------- -->
       <!-- SUGGESTED CHANNELS -->
       <!-- ---------------------- -->
-      <ng-container
-        *ngIf="
-          !(inProgress$ | async) &&
-          !(cardCarouselInProgress$ | async) &&
-          i === 1
-        "
+      <ng-container *ngIf="(showSuggestedChannels$ | async) && i === 1"
         ><m-discovery__cardCarousel
           *ngIf="
             (cardCarouselService.searchCards$ | async) &&
