--- a/src/app/modules/compass/questionnaire-modal/questionnaire-modal.component.html
+++ b/src/app/modules/compass/questionnaire-modal/questionnaire-modal.component.html
@@ -5,8 +5,9 @@
   <div class="m-compassQuestionnaireModal__main">
     <span class="m-compassQuestionnaireModal__title">Build your algorithm</span>
     <span class="m-compassQuestionnaireModal__subtitle"
-      >The preferences you set will improve your feed over time as the open
-      source machine learning monkeys evolve.</span
+      >The preferences you set will improve your recommendations over time as
+      the open source machine learning monkeys evolve. Don't worry, it won't
+      impact your default newsfeed.</span
     >
     <!-- TODO: Add more information link  -->
     <m-compassForm></m-compassForm>
