--- a/src/app/common/components/subscribe-button/subscribe-button.component.html
+++ b/src/app/common/components/subscribe-button/subscribe-button.component.html
@@ -6,7 +6,7 @@
     color="blue"
     [iconOnly]="iconOnly"
     title="Subscribe"
-    [saving]="inProgress"
+    [saving]="inProgress && !iconOnly"
     [disabled]="inProgress || disableSubscribe"
   >
     <i class="material-icons">
@@ -22,7 +22,7 @@
     size="xsmall"
     [iconOnly]="iconOnly"
     title="Unsubscribe"
-    [saving]="inProgress"
+    [saving]="inProgress && !iconOnly"
     [disabled]="inProgress || disableSubscribe"
   >
     <i class="material-icons">
