--- a/src/app/modules/newsfeed/activity/owner-block/owner-block.component.ng.scss
+++ b/src/app/modules/newsfeed/activity/owner-block/owner-block.component.ng.scss
@@ -94,7 +94,7 @@
     flex-direction: row;
   }
 
-  .m-activityOwnerBlock__displayName {
+  a.m-activityOwnerBlock__displayName {
     display: flex;
     font-size: 16px;
 
