Use target blanks in embed so links open in a new tab #5146

--- a/src/app/modules/embed/embedded-video/embedded-video.component.html
+++ b/src/app/modules/embed/embedded-video/embedded-video.component.html
@@ -13,12 +13,14 @@
   [class.m-embedded-video__top--active]="topVisible"
   *ngIf="entity"
 >
-  <a href="{{ channelUrl }}">
+  <a href="{{ channelUrl }}" target="_blank">
     <div
       class="m-embedded-video__channel-avatar"
       [ngStyle]="{ 'background-image': 'url(' + avatarSrc + ')' }"
       *ngIf="avatarSrc"
     ></div>
   </a>
-  <a href="{{ mediaUrl }}" class="m-embedded-video__title">{{ title }}</a>
+  <a href="{{ mediaUrl }}" target="_blank" class="m-embedded-video__title">{{
+    title
+  }}</a>
 </div>
